[gd_scene load_steps=4 format=3 uid="uid://c83v6gq7elfnr"]

[ext_resource type="Script" path="res://Terrain/TerrainSquare.gd" id="1_35flo"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nbqme"]
albedo_color = Color(1, 0.235294, 0.215686, 1)

[sub_resource type="ArrayMesh" id="ArrayMesh_a8yho"]

[node name="TerrainSquare" type="MeshInstance3D"]
material_override = SubResource("StandardMaterial3D_nbqme")
mesh = SubResource("ArrayMesh_a8yho")
script = ExtResource("1_35flo")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]

[connection signal="mouse_entered" from="Area3D" to="." method="on_mouse_entered"]
[connection signal="mouse_exited" from="Area3D" to="." method="on_mouse_exited"]
